{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 46,
  "lineage": "82ef5379-309b-8397-5c3a-12adfd29581e",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:967746377558:loadbalancer/app/tf-mod-webapp-alb/e2f3ab169901f923",
            "arn_suffix": "app/tf-mod-webapp-alb/e2f3ab169901f923",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-mod-webapp-alb-559446739.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:967746377558:loadbalancer/app/tf-mod-webapp-alb/e2f3ab169901f923",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-mod-webapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-006337624d3d4cc7b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-055319533185f32ac"
              },
              {
                "subnet_id": "subnet-0f6d6cea654d3df08"
              }
            ],
            "subnets": [
              "subnet-055319533185f32ac",
              "subnet-0f6d6cea654d3df08"
            ],
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-alb",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-alb",
              "Project": "tf-mod-webapp"
            },
            "vpc_id": "vpc-079a43cc982e79602",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:967746377558:listener/app/tf-mod-webapp-alb/e2f3ab169901f923/c36cdf249a95c741",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:967746377558:targetgroup/tf-mod-webapp-tg/048c0b03972d372d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:967746377558:listener/app/tf-mod-webapp-alb/e2f3ab169901f923/c36cdf249a95c741",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:967746377558:loadbalancer/app/tf-mod-webapp-alb/e2f3ab169901f923",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.tg",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:967746377558:targetgroup/tf-mod-webapp-tg/048c0b03972d372d",
            "arn_suffix": "targetgroup/tf-mod-webapp-tg/048c0b03972d372d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:967746377558:targetgroup/tf-mod-webapp-tg/048c0b03972d372d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:967746377558:loadbalancer/app/tf-mod-webapp-alb/e2f3ab169901f923"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-mod-webapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-tg",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-tg",
              "Project": "tf-mod-webapp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "att",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:967746377558:targetgroup/tf-mod-webapp-tg/048c0b03972d372d-20251101004845107500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:967746377558:targetgroup/tf-mod-webapp-tg/048c0b03972d372d",
            "target_id": "i-0e9c05555ec128835"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.dynamodb.aws_dynamodb_table.this",
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.aws_instance.web",
            "module.ec2.data.aws_iam_policy_document.assume_ec2",
            "module.ec2.data.aws_ssm_parameter.al2023",
            "module.s3.aws_s3_bucket.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ec2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bdd88bd06d16ba03",
            "arn": "arn:aws:ec2:us-east-1:967746377558:instance/i-0e9c05555ec128835",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tf-mod-webapp-instance-profile",
            "id": "i-0e9c05555ec128835",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e597fb4c8ca2e1d5",
            "private_dns": "ip-10-0-2-242.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02a5c6d92a5b3f248",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c70791b2ce42767",
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-web",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-web",
              "Project": "tf-mod-webapp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2042081591e56eb"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dynamodb.aws_dynamodb_table.this",
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.data.aws_iam_policy_document.assume_ec2",
            "module.ec2.data.aws_ssm_parameter.al2023",
            "module.s3.aws_s3_bucket.this",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ec2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:security-group/sg-006337624d3d4cc7b",
            "description": "Allow HTTP from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006337624d3d4cc7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-mod-webapp-alb-sg",
            "name_prefix": "",
            "owner_id": "967746377558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-alb-sg",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-alb-sg",
              "Project": "tf-mod-webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:security-group/sg-0e2042081591e56eb",
            "description": "Allow HTTP from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2042081591e56eb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006337624d3d4cc7b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-mod-webapp-ec2-sg",
            "name_prefix": "",
            "owner_id": "967746377558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-ec2-sg",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-ec2-sg",
              "Project": "tf-mod-webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084e992a3133a4da5",
            "arn": "arn:aws:ec2:us-east-1:967746377558:elastic-ip/eipalloc-084e992a3133a4da5",
            "association_id": "eipassoc-0aa2f970638da6df8",
            "domain": "vpc",
            "id": "eipalloc-084e992a3133a4da5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b8a2f65da0c79d71",
            "private_dns": "ip-10-0-1-72.ec2.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-98-87-236-5.compute-1.amazonaws.com",
            "public_ip": "98.87.236.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-nat-eip",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-nat-eip",
              "Project": "tf-mod-webapp"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:internet-gateway/igw-09f89337ce744246a",
            "id": "igw-09f89337ce744246a",
            "owner_id": "967746377558",
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-igw",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-igw",
              "Project": "tf-mod-webapp"
            },
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084e992a3133a4da5",
            "association_id": "eipassoc-0aa2f970638da6df8",
            "connectivity_type": "public",
            "id": "nat-05ac35cbe1e7d76bb",
            "network_interface_id": "eni-0b8a2f65da0c79d71",
            "private_ip": "10.0.1.72",
            "public_ip": "98.87.236.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-055319533185f32ac",
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-nat",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-nat",
              "Project": "tf-mod-webapp"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e52bb5ea0c0ab8a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05ac35cbe1e7d76bb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e52bb5ea0c0ab8a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09f89337ce744246a",
            "id": "r-rtb-0cb2483b0b0336c341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb2483b0b0336c34",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:route-table/rtb-09e52bb5ea0c0ab8a",
            "id": "rtb-09e52bb5ea0c0ab8a",
            "owner_id": "967746377558",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05ac35cbe1e7d76bb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-rt-private",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-rt-private",
              "Project": "tf-mod-webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:route-table/rtb-0cb2483b0b0336c34",
            "id": "rtb-0cb2483b0b0336c34",
            "owner_id": "967746377558",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f89337ce744246a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-rt-public",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-rt-public",
              "Project": "tf-mod-webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be0e74a516dd50b9",
            "route_table_id": "rtb-09e52bb5ea0c0ab8a",
            "subnet_id": "subnet-06c70791b2ce42767"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9bcabe6efc75eaf",
            "route_table_id": "rtb-09e52bb5ea0c0ab8a",
            "subnet_id": "subnet-06c6df5a1f99b90c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e9583e4ddceaf95",
            "route_table_id": "rtb-0cb2483b0b0336c34",
            "subnet_id": "subnet-055319533185f32ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e2ed946eb62976e",
            "route_table_id": "rtb-0cb2483b0b0336c34",
            "subnet_id": "subnet-0f6d6cea654d3df08"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:subnet/subnet-06c70791b2ce42767",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c70791b2ce42767",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967746377558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-private-0",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-private-0",
              "Project": "tf-mod-webapp"
            },
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:subnet/subnet-06c6df5a1f99b90c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c6df5a1f99b90c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967746377558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-private-1",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-private-1",
              "Project": "tf-mod-webapp"
            },
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:subnet/subnet-055319533185f32ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055319533185f32ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "967746377558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-public-0",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-public-0",
              "Project": "tf-mod-webapp"
            },
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:subnet/subnet-0f6d6cea654d3df08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6d6cea654d3df08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "967746377558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-public-1",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-public-1",
              "Project": "tf-mod-webapp"
            },
            "vpc_id": "vpc-079a43cc982e79602"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967746377558:vpc/vpc-079a43cc982e79602",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f825fd7a189d1560",
            "default_route_table_id": "rtb-009fff58f756cbdfc",
            "default_security_group_id": "sg-0ca5cc776f867ca42",
            "dhcp_options_id": "dopt-085af8848affa35f6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079a43cc982e79602",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-009fff58f756cbdfc",
            "owner_id": "967746377558",
            "tags": {
              "Env": "dev",
              "Name": "tf-mod-webapp-vpc",
              "Project": "tf-mod-webapp"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tf-mod-webapp-vpc",
              "Project": "tf-mod-webapp"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}